@@ -1,7 +1,7 @@
 package ru.practicum.shareit.booking;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.PageRequest;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,9 +18,9 @@ import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.mapper.BookingMapper;
 import ru.practicum.shareit.user.UserStorage;
 import ru.practicum.shareit.user.model.User;
+import ru.practicum.shareit.util.OffsetBasedPageRequest;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -36,7 +36,7 @@ public class BookingServiceImpl implements BookingService {
 
     @Transactional(readOnly = true)
     @Override
-    public List<GetBookingDto> getUserBookings(long userId, String stateString, int from, int size) {
+    public List<GetBookingDto> getUserBookings(long userId, @NotNull String stateString, int from, int size) {
         User user = userStorage.findById(userId).orElseThrow(
                 () -> new NotFoundException("Пользователь не найден")
         );
@@ -47,20 +47,20 @@ public class BookingServiceImpl implements BookingService {
         LocalDateTime currentMoment = LocalDateTime.now();
         List<Booking> bookings;
 
-        Pageable pageable = PageRequest.of(from/size, size, SORT_BY_START_DATE_DESC);
+        Pageable pageable = new OffsetBasedPageRequest(from, size, SORT_BY_START_DATE_DESC);
 
         switch (state) {
             case ALL:
                 bookings = bookingStorage.findAllByBooker(user, pageable);
                 break;
             case CURRENT:
-                bookings = bookingStorage.findAllByBookerAndStartDateBeforeAndEndDateAfter(user, currentMoment, currentMoment, pageable);
+                bookings = bookingStorage.findAllByBookerAndCurrent(user, currentMoment, pageable);
                 break;
             case PAST:
-                bookings = bookingStorage.findAllByBookerAndEndDateBefore(user, currentMoment, pageable);
+                bookings = bookingStorage.findAllByBookerAndPast(user, currentMoment, pageable);
                 break;
             case FUTURE:
-                bookings = bookingStorage.findAllByBookerAndStartDateAfter(user, currentMoment, pageable);
+                bookings = bookingStorage.findAllByBookerAndFuture(user, currentMoment, pageable);
                 break;
             case WAITING:
                 bookings = bookingStorage.findAllByBookerAndStatus(user, Status.WAITING, pageable);
@@ -69,7 +69,7 @@ public class BookingServiceImpl implements BookingService {
                 bookings = bookingStorage.findAllByBookerAndStatus(user, Status.REJECTED, pageable);
                 break;
             default:
-                bookings = Collections.emptyList();
+                bookings = List.of();
         }
 
         return bookings
@@ -80,7 +80,7 @@ public class BookingServiceImpl implements BookingService {
 
     @Transactional(readOnly = true)
     @Override
-    public List<GetBookingDto> getOwnerBookings(long userId, String stateString, int from, int size) {
+    public List<GetBookingDto> getOwnerBookings(long userId, @NotNull String stateString, int from, int size) {
         User user = userStorage.findById(userId).orElseThrow(
                 () -> new NotFoundException("Пользователь не найден")
         );
@@ -91,20 +91,20 @@ public class BookingServiceImpl implements BookingService {
         LocalDateTime currentMoment = LocalDateTime.now();
         List<Booking> bookings;
 
-        Pageable pageable = PageRequest.of(from/size, size, SORT_BY_START_DATE_DESC);
+        Pageable pageable = new OffsetBasedPageRequest(from, size, SORT_BY_START_DATE_DESC);
 
         switch (state) {
             case ALL:
                 bookings = bookingStorage.findAllByItemOwner(user, pageable);
                 break;
             case CURRENT:
-                bookings = bookingStorage.findAllByItemOwnerAndStartDateBeforeAndEndDateAfter(user, currentMoment, currentMoment, pageable);
+                bookings = bookingStorage.findAllByItemOwnerAndCurrent(user, currentMoment, pageable);
                 break;
             case PAST:
-                bookings = bookingStorage.findAllByItemOwnerAndEndDateBefore(user, currentMoment, pageable);
+                bookings = bookingStorage.findAllByItemOwnerAndPast(user, currentMoment, pageable);
                 break;
             case FUTURE:
-                bookings = bookingStorage.findAllByItemOwnerAndStartDateAfter(user, currentMoment, pageable);
+                bookings = bookingStorage.findAllByItemOwnerAndFuture(user, currentMoment, pageable);
                 break;
             case WAITING:
                 bookings = bookingStorage.findAllByItemOwnerAndStatus(user, Status.WAITING, pageable);
@@ -113,7 +113,7 @@ public class BookingServiceImpl implements BookingService {
                 bookings = bookingStorage.findAllByItemOwnerAndStatus(user, Status.REJECTED, pageable);
                 break;
             default:
-                bookings = Collections.emptyList();
+                bookings = List.of();
         }
 
         return bookings
@@ -140,7 +140,7 @@ public class BookingServiceImpl implements BookingService {
     }
 
     @Override
-    public GetBookingDto create(long userId, CreateBookingDto createBookingDto) {
+    public GetBookingDto create(long userId, @NotNull CreateBookingDto createBookingDto) {
         User user = userStorage.findById(userId).orElseThrow(
                 () -> new NotFoundException("Пользователь не найден")
         );
